# mitchell-gravity-set

./: .dir-locals.el  .gitignore  .gitmodules  .tmuxinator.yml  .travis.yml  1  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  MGS compute.srctrldb  MGS compute.srctrlprj  Makefile  README.md  README.org  cmake_install.cmake  conanfile.txt  manifest.sh  smult.gdb
.cargo/: config
cmake_modules/: AddGTest.cmake
compute/: CMakeLists.txt  Makefile  cmake_install.cmake  compute.cpp  compute.h  compute.hpp  marching_tetrahedra.cpp  marching_tetrahedra.h
compute/include/: compute  marching_tetrahedra  mgscompute.h
docs/: CMakeLists.txt
documentation/: 20190223_182428.jpg~  Doxyfile  Doxyfile.in
documentation/doxy/html/: annotated.html  classes.html  classmgs_1_1StarConfig-members.html  classmgs_1_1StarConfig.html  classmgs_1_1StarConfig__coll__graph.map  classmgs_1_1StarConfig__coll__graph.md5  classmgs_1_1StarConfig__inherit__graph.md5  classmgs_1_1StarFieldGUI-members.html  classmgs_1_1StarFieldGUI.html  classmgs_1_1StarFieldGUI__coll__graph.map  classmgs_1_1StarFieldGUI__coll__graph.md5  classmgs_1_1StarFieldGUI__inherit__graph.md5  classmgs_1_1march_1_1MakeMesh-members.html  classmgs_1_1march_1_1MakeMesh.html  classmgs_1_1march_1_1MakeMesh__coll__graph.map  classmgs_1_1march_1_1MakeMesh__coll__graph.md5  classmgs_1_1march_1_1MakeMesh__inherit__graph.md5  classmgs_1_1march_1_1MakeTesselation-members.html  classmgs_1_1march_1_1MakeTesselation.html  classmgs_1_1march_1_1MakeTesselation__coll__graph.map  classmgs_1_1march_1_1MakeTesselation__coll__graph.md5  classmgs_1_1march_1_1MakeTesselation__inherit__graph.md5  classmgs_1_1march_1_1MakeTesselation_ace6aa58a0636038e85d187de142e1aa9_cgraph.map  classmgs_1_1march_1_1MakeTesselation_ace6aa58a0636038e85d187de142e1aa9_cgraph.md5  classmgs_1_1march_1_1Pipeline.html  classmgs_1_1march_1_1Pipeline__inherit__graph.map  classmgs_1_1march_1_1Pipeline__inherit__graph.md5  classmgs_1_1render_1_1ViewPort-members.html  classmgs_1_1render_1_1ViewPort.html  classmgs_1_1render_1_1ViewPort__coll__graph.map  classmgs_1_1render_1_1ViewPort__coll__graph.md5  classmgs_1_1render_1_1ViewPort__inherit__graph.md5  compute_8h_source.html  dir_09c30c3210656b7066c578613d650341.html  dir_0aec905722638a09b3267c4de0fa0e08.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_d81239180ffcca5b1ab5042e9b673dd8.html  files.html  functions.html  functions_func.html  (+103 more)
documentation/doxy/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js
documentation/doxy/latex/: annotated.tex  classmgs_1_1StarConfig.tex  classmgs_1_1StarConfig__coll__graph.md5  classmgs_1_1StarConfig__inherit__graph.md5  classmgs_1_1StarFieldGUI.tex  classmgs_1_1StarFieldGUI__coll__graph.md5  classmgs_1_1StarFieldGUI__inherit__graph.md5  classmgs_1_1march_1_1MakeMesh.tex  classmgs_1_1march_1_1MakeMesh__coll__graph.md5  classmgs_1_1march_1_1MakeMesh__inherit__graph.md5  classmgs_1_1march_1_1MakeTesselation.tex  classmgs_1_1march_1_1MakeTesselation__coll__graph.md5  classmgs_1_1march_1_1MakeTesselation__inherit__graph.md5  classmgs_1_1march_1_1MakeTesselation_ace6aa58a0636038e85d187de142e1aa9_cgraph.md5  classmgs_1_1march_1_1Pipeline.tex  classmgs_1_1march_1_1Pipeline__inherit__graph.md5  classmgs_1_1render_1_1ViewPort.tex  classmgs_1_1render_1_1ViewPort__coll__graph.md5  classmgs_1_1render_1_1ViewPort__inherit__graph.md5  dir_09c30c3210656b7066c578613d650341.tex  dir_0aec905722638a09b3267c4de0fa0e08.tex  dir_11bc0974ce736ce9a6fadebbeb7a8314.tex  dir_d81239180ffcca5b1ab5042e9b673dd8.tex  hierarchy.tex  namespacemgs.tex  namespacemgs_1_1march.tex  namespacemgs_aa3d52c646ace701de74ece1b83e81c3d_icgraph.md5  namespaces.tex  refman.tex  structmgs_1_1Bounds.tex  structmgs_1_1Bounds__coll__graph.md5  structmgs_1_1Field.tex  structmgs_1_1FieldParms.tex  structmgs_1_1FieldParmsSimulation.tex  structmgs_1_1FieldParmsSimulation__coll__graph.md5  structmgs_1_1FieldParmsSimulation__inherit__graph.md5  structmgs_1_1FieldParms__coll__graph.md5  structmgs_1_1Field__coll__graph.md5  structmgs_1_1Field_a28972ab1f16b45ca949849de53ecf7e7_icgraph.md5  structmgs_1_1Index.tex  (+11 more)
documentation/doxy/man/man3/: _development_cpp_proj_gravity-set-compute_compute_.3  mgs.3  mgs_Bounds.3  (+21 more)
examples/: CMakeLists.txt
gui/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  cmake_install.cmake  configuration.cpp  configuration.hpp  configuration.ui  main.cpp  mgs  mgs.cpp  mgs.h  mgs.hpp  star_config.cpp  star_config.h  star_field_gui.cpp  star_field_gui.h  starconfig.cpp  starconfig.h  starconfig.hpp  starfield.cpp  starfield.h  starfield.hpp  viewport.cpp  viewport.h
gui/build-gui-Desktop-Debug/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
gui/build-gui-Desktop-Debug/mgs_autogen/: mocs_compilation.cpp
gui/build-gui-Desktop-Debug/mgs_autogen/EWIEGA46WW/: moc_configuration.cpp
gui/build-gui-Desktop-Default/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
gui/build-mgsGUI-mgs-Debug/: Makefile  mgsGUI  qrc_qml.cpp
gui/mgsGUI/: main.cpp  main.qml  mgsGUI.pro
gui/mgs_autogen/: moc_predefs.h  mocs_compilation.cpp
gui/mgs_autogen/EWIEGA46WW/: moc_configuration.cpp  moc_mgs.cpp  moc_star_config.cpp  moc_star_field_gui.cpp  moc_starconfig.cpp  moc_starfield.cpp
src/: main.rs
src/mgs_gui/: mod.rs
src/support/: mod.rs
submods/: CMakeLists.txt
submods/merseberg-incantation/include/header/: merseberg
submods/merseburg-incantation/: .clang-format  LICENSE  README.org
submods/merseburg-incantation/cmake_modules/: AddGMock.cmake
submods/merseburg-incantation/docs/: doxygen.cfg.in  mainpage.md
submods/merseburg-incantation/include/merseberg/: merseberg.h
submods/merseburg-incantation/tests/: CMakeLists.txt  simple_test.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  mgstest  test.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
