[package]
name = "mitchell-gravity-set"
version = "0.1.0"
authors = ["Fred Mitchell <fred.mitchell@gmx.de>"]
license = "MIT"
repository = "https://github.com/flajann2/mitchell-gravity-set.git"
homepage   = "https://github.com/flajann2/mitchell-gravity-set"
readme = "README.org"
keywords = ["fractals", "mgs", "gui", "gravity", "3D"]

[dependencies]
gfx                = "0"
conrod = { version = "^0", features = ["piston"] }
servo-glutin       = "0"
pistoncore-input   = "0"
piston3d-gfx_voxel = "0"
piston2d-graphics  = "0"
piston_window      = "0"
find_folder        = "0"
rand               = "0"

#gravity_set       = "0"
